--- a/src/main/resources/templates/view2.html
+++ b/src/main/resources/templates/view2.html
@@ -1,11 +1,14 @@
 <!DOCTYPE html>
-<html xmlns="http://www.thymeleaf.org">
-    <head>
-        <title>Success Page</title>
-    </head>
-    <body>
-        <h1>Your message has been posted to the community message board</h1>
-        <p>The notice posting id is <span th:text="${id}"></span></p>
-        <a href="/notice">Back</a>
-    </body>
+<html xmlns:th="http://www.thymeleaf.org">
+
+<head>
+    <title>Success Page</title>
+</head>
+
+<body>
+    <h1>Your message has been posted to the community message board</h1>
+    <p>The notice posting id is <span th:text="${id}"></span></p>
+    <a href="/notice">Back</a>
+</body>
+
 </html>
