--- a/src/main/resources/templates/view3.html
+++ b/src/main/resources/templates/view3.html
@@ -1,12 +1,16 @@
 <!DOCTYPE html>
-<html xmlns="http://www.thymeleaf.org">
-    <head>
-        <title>Error Page</title>
-    </head>
-    <body>
-        <h1>Cannot post notice to server</h1>
-        <h2>Error message</h2>
-        <p th:text="${error}"></p>
-        <a href="/notice">Back</a>
-    </body>
+<html xmlns:th="http://www.thymeleaf.org">
+
+<head>
+    <title>Error</title>
+
+</head>
+
+<body>
+    <h1>Cannot post notice to the server</h1>
+    <h2>Error message</h2>
+    <p>Error: <span th:text="${error}"></span></p>
+    <a href="/notice">Back</a>
+</body>
+
 </html>
