Final push, changes to Docker health and controller

--- a/src/main/resources/templates/view2.html
+++ b/src/main/resources/templates/view2.html
@@ -8,7 +8,7 @@
 <body>
     <h1>Your message has been posted to the community message board</h1>
     <p>The notice posting id is <span th:text="${id}"></span></p>
-    <a href="/notice">Back</a>
+    <a href="/">Back</a>
 </body>
 
 </html>
