--- a/src/main/resources/templates/view3.html
+++ b/src/main/resources/templates/view3.html
@@ -10,7 +10,7 @@
     <h1>Cannot post notice to the server</h1>
     <h2>Error message</h2>
     <p>Error: <span th:text="${error}"></span></p>
-    <a href="/notice">Back</a>
+    <a href="/">Back</a>
 </body>
 
 </html>
